--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,12 +6,17 @@ body {
   position: relative;
   background: transparent;
   overflow: hidden;
-  display: grid;
+  display: flex;
+}
+
+#root {
+  width: 100%;
 }
 
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 p {
@@ -81,4 +86,45 @@ body {
   width: 100%;
   height: 100%;
   background-color: white;
+  padding: 10px;
+
+  h1 {
+    font-size: 32px;
+    text-align: center;
+  }
+
+  .action-button {
+    display: block;
+    margin: 10px auto;
+    padding: 10px 30px;
+    border: 1px solid black;
+    background: white;
+    border-radius: 5px;
+    font-weight: bold;
+    cursor: pointer;
+  }
+
+  .checkbox-area {
+    label {
+      margin-right: 10px;
+    }
+    margin-bottom: 20px;
+  }
+
+  .config-area {
+    width: 100%;
+    textarea {
+      width: 100%;
+      height: 250px;
+      border: 1px solid black;
+      border-radius: 5px;
+      padding: 10px;
+      // prevent resize
+      resize: none;
+    }
+
+    .errors {
+      color: red;
+    }
+  }
 }
